[tool.poetry]
name = "designpatternpy"
version = "0.1.0"
description = ""
authors = ["Karim Moradi <kmoradi.ai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyfiglet = "^0.8.post1"
pytest = "^7.3.0"
black = "^23.3.0"
isort = "^5.12.0"
pydantic = "^1.10.8"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
